--- a/index.html
+++ b/index.html
@@ -13,19 +13,30 @@
     </style>
 
     <script type="text/javascript">
+        function disableResize() {
+            parent.document.getElementById("leftFrame").noResize = true
+            parent.document.getElementById("rightFrame").noResize = true
+        }
+        function enableResize() {
+            parent.document.getElementById("leftFrame").noResize = false
+            parent.document.getElementById("rightFrame").noResize = false
+        }
     </script>
 </head>
 
 <frameset cols="250, *">
     <!-- Nav Left -->
-    <frame src="./NavLeft.html" name="NavLeft">
+    <frame src="./NavLeft.html" name="NavLeft" id="NavLeft">
         <frameset>
             <!-- Main Frame -->
             <frame src="./MainFrame.html" name="MainFrame"></frame>
         </frameset>
         <noframes>
 
-            <body></body>
+            <body>
+                <input type="button" onclick="disableResize()" value="No resize">
+                <input type="button" onclick="enableResize()" value="Resize">
+            </body>
         </noframes>
 
 </html>
